--- a/backend/web/css/site.css
+++ b/backend/web/css/site.css
@@ -9,6 +9,21 @@ html,body{
     margin: 0 auto -60px;
     padding: 0 0 60px;
 }
+p{
+	color:#333 !important;
+}
+
+.step{
+	padding: 30px;
+    margin-bottom: 20px;
+    background: #f7f7f7;
+    border-radius: 5px;
+}
+
+.red{
+	color:red !important;
+	font-size:18px;
+}
 table{
 	width:100%;
 }
