--- a/frontend/web/css/site.css
+++ b/frontend/web/css/site.css
@@ -70,6 +70,9 @@ h5, .h5 {
 	width:60px;
 	height:60px;
 }
+.modal-title{
+	color:#fff !important;
+}
 .bottom-logo {
   position: fixed;
   bottom: 15px;
